Chip/Chip.module.less
// Chip.module.less
//
@import '../styles/variables.less';
@import "../styles/skin.less";

.chip {
	position: relative;
	display: inline-block;

	.button {
		&.small {
			margin: @lime-chip-margin;
			min-width: @lime-chip-min-width;
		}

		.bg {
			border-radius: @lime-chip-border-radius;
		}
	}

	.deleteButtonContainer {
		position: absolute;
		display: none;

		&.right {
			top: 0;
			right: 0;
			transform: translateX(100% - @lime-chip-margin);
		}

		&.bottom {
			bottom: @lime-chip-margin;
			left: 50%;
			transform: translate(-50%, 100%);
		}

		&.top {
			top: -100% + @lime-chip-margin;
			left: 50%;
			transform: translateX(-50%);
		}
	}

	.focused {
		display: block;
	}

	.applySkins({
		.bg {
			color: @lime-chip-container-color;
		}
	});
}

